// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots NavItem TODO 1`] = `<div />`;

exports[`Storyshots NavItem active 1`] = `
<button
  data-css-h9nsfk=""
  icon={<HomeIcon />}
>
  <span
    data-css-1rjw4v0=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="home icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          clipRule="evenodd"
          d="M21 13.417l.989.988a.5.5 0 00.707 0l.707-.708a.5.5 0 000-.707L12.353 1.954a.5.5 0 00-.707 0L.61 12.99a.5.5 0 000 .707l.707.707a.5.5 0 00.707 0L3 13.428v7.573a1 1 0 001 1h5a1 1 0 001-1v-4a2 2 0 114 0v4a1 1 0 001 1h5a1 1 0 001-1v-7.584zM5 11.428l7-7 7 6.991v8.582h-3v-3a4 4 0 10-8 0v3H5v-8.573z"
          fillRule="evenodd"
        />
      </svg>
    </div>
  </span>
  <span>
    Active state
  </span>
</button>
`;

exports[`Storyshots NavItem icon 1`] = `
<button
  data-css-1x7oio0=""
  icon={<CheckIcon />}
>
  <span>
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </span>
  <span>
    Text only
  </span>
</button>
`;

exports[`Storyshots NavItem text only 1`] = `
<button
  data-css-15sudsv=""
>
  <span />
  <span>
    Text only
  </span>
</button>
`;
